k8s_uebungen/7_deployment/app_ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
    name: app-ingress
spec:
    rules:
        - host: qa6.k8s-schulung.viadee.cloud
          http:
              paths:
                  - backend:
                        serviceName: demo-app
                        servicePort: 80
    tls:
        - secretName: tls-k8s-schulung-viadee-cloud
